# commaneverends

./: README.md  _config.yml  a_event.md  a_island.md  a_map.md  pyproject.toml
_posts/: 2019-10-27-welcome-to-commaneverends.markdown  2022-02-14-berlinale.markdown  2022-02-14-berlinale2022.markdown  2022-02-14-berlinale2022.md  2022-02-27-berlinale.markdown
place_diplay_ver2/address_to_latlng/: utils.py
place_diplay_ver2/osm_leaflet/: index.html
place_diplay_ver2/osm_leaflet/maps/: leaf-demo.js  markers.js
table_event/: index.html
table_place/: index.html
table_place/data/: place-2022-01-31.csv  placeform_2022-01-31.csv
table_place_test/: index.html
tablemaker/: index.html
tablemaker/data/: placeform.csv
