[tool.poetry]
name = "comma_ver0"
version = "0.1.0"
description = ""
authors = ["Hyein Jeong <hyein.jeong@nooxit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openstreetmap = "^0.0.19"
ggplot = "^0.11.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
